2001-01-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Added support for files with scanlines split across records in the
	ceos2 (SAR_CEOS) reader.

2001-01-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Added alg directory, and GDALComputeMedianCutPCT(), and
	GDALDitherRGB2PCT() functions.

===============================================================================
	
2001-01-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Released gdal 1.1.3 source distributions.

2001-01-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Improved python configure logic so it skips python if there is
	no python makefile.

2001-01-17  Frank Warmerdam  <warmerdam@pobox.com>

	* Added progressive jpeg support (a couple days ago).

	* Added support for processing CODELIST records in NTF reader (as
	used for BL2000 datasets).

2001-01-10  Frank Warmerdam  <warmerdam@pobox.com>

	* Patched GDALDataset::FlushCache() to recover gracefully if papoBands
	  doesn't exist yet matching nBands.

2001-01-09  Frank Warmerdam  <warmerdam@pobox.com>

	* Added GIF driver based on libungif.

2001-01-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed some serious bugs with clean target on windows makefile.
	Now links gdal11.dll with /debug.

	* Erdas Imagine now uses large file API to support 2-4GB files on
	Windows.

	* libtiff now uses large file api (tif_vsi.c) on windows to handle
	2-4GB tiff files. 

	* Added large file API in port/cpl_vsi.h, and implemented for
	Win32 in port/cpl_vsil_win32.c

2000-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* Added read support for .tfw files, and read/write support
	for GEOTRANSMATRIX in GeoTIFF. 

	* Fixed so that non-geographic/projected model types result in
	an empty coordinate system string, not WGS84, as per bug report
	from Eric Miller and aerial.tif. 

2000-12-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Added HKVDataset::Delete() implementation, made accessable from
	python.

2000-12-13  Frank Warmerdam  <warmerdam@pobox.com>
